--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,11 @@ __pycache__/
 *.pyc
 /Mach2D_using2D_arrays.rar
 /Mach2D/mach2d_output/mach2d_S01_residual_60938.4.dat
+/Mach2D/mach2d_output/dgi_output.txt
+/Mach2D/mach2d_output/mach2d_S01.txt
+/Mach2D/mach2d_output/mach2d_S01_main_fields - Copia.vtk
+/Mach2D/mach2d_output/mach2d_S01_main_fields.dat
+/Mach2D/mach2d_output/mach2d_S01_residual.dat
+/Mach2D_final.rar
+/Mach2D_noreturns_bug.rar
+/Relatório 20190913-1426_200x200.diagsession
